Fixed to truncate very long user names in the status bar and rooms sidebar.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -503,6 +503,11 @@ body.logged-out
     > a
       color #FD7773
 
+  .room-name
+    display inline-block
+    width room-sidebar-width - 85px
+    overflow ellipsis
+
   .close-room
     float right
     padding 0 5px
@@ -555,6 +560,9 @@ body.logged-out
     opacity 1
 
   .username
+    display inline-block
+    max-width room-sidebar-width - 100px // Subtract the width of the avatar and settings.
+    overflow ellipsis
     font-size 12px
 
 .choose-status-menu
